<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            android:textColor="@color/black"
            android:textSize="50sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_description"
            android:textColor="@color/black"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textSize="20sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/github"
            android:text="@string/author"
            android:layout_margin="16dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            app:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button"
            android:backgroundTint="@color/brown"
            android:textColor="@color/white"
            android:textSize="20sp"/>


    </LinearLayout>

    <!--navigasyon menüsü-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nv_side"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/side_tabs"/>

</androidx.drawerlayout.widget.DrawerLayout>
